--- a/content/van/van-article-number-1.mdx
+++ b/content/van/van-article-number-1.mdx
@@ -2,8 +2,12 @@
 title: "First Post Van!"
 author: "Ryan Russell"
 date: "2023-08-06"
+category: "van"
+excerpt: "test"
 ---
-<h1>This is my first post!</h1>
+
+## This is my first post!
 HEllo
 Hello
 
+![Test](../public/test.png)
