--- a/content/tech/tech-article-number-1.mdx
+++ b/content/tech/tech-article-number-1.mdx
@@ -2,8 +2,7 @@
 title: "First Post Tech!"
 author: "Ryan Russell"
 date: "2023-08-06"
+category: "tech"
 ---
-<h1>This is my first post!</h1>
-HEllo
 Hello
 
