--- a/src/content/blog/tech/tech-article-number-1.mdx
+++ b/src/content/blog/tech/tech-article-number-1.mdx
@@ -1,8 +1,9 @@
 ---
 title: "First Post Tech!"
 author: "Ryan Russell"
-date: "2023-08-06"
+date: "2021-05-01"
 category: "tech"
+description: "test"
 ---
 Hello
 
