--- a/src/content/blog/van/van-article-number-1.mdx
+++ b/src/content/blog/van/van-article-number-1.mdx
@@ -1,13 +1,11 @@
 ---
 title: "First Post Van!"
 author: "Ryan Russell"
-date: "2023-08-06"
+date: "2023-08-01"
 category: "van"
-excerpt: "test"
+description: "test"
 ---
 
 ## This is my first post!
 HEllo
 Hello
-
-![Test](../public/test.png)
