--- a/src/content/blog/van/van-article-number-2.mdx
+++ b/src/content/blog/van/van-article-number-2.mdx
@@ -1,6 +1,7 @@
 ---
 title: My First Blog
-date: '2023-07-01'
+date: '2023-09-09'
+author: 'Ryan Russell'
 description: Welcome to my first blog.
 category: "van"
 ---
