fix layouts, add home, first van post

--- a/src/content/blog/home/home-article-number-2.mdx
+++ b/src/content/blog/home/home-article-number-2.mdx
@@ -1,9 +1,9 @@
 ---
-title: My First Blog
-date: '2023-09-09'
+title: My 2nd Blog
+date: '2022-09-09'
 author: 'Ryan Russell'
 description: Welcome to my first blog.
-category: "van"
+category: "home"
 ---
 
 This is my **first** blog post using *markdown*.
