--- a/src/content/blog/home/test.mdx
+++ b/src/content/blog/home/test.mdx
@@ -1,8 +1,8 @@
 ---
-title: "First Post Van!"
+title: "First Post Home!"
 author: "Ryan Russell"
-date: "2023-08-29"
-category: "van"
+date: "2021-08-29"
+category: "home"
 description: "test"
 ---
 
