--- a/src/content/blog/home/home-article-number-3.mdx
+++ b/src/content/blog/home/home-article-number-3.mdx
@@ -2,7 +2,7 @@
 title: My Third Blog
 date: '2023-01-09'
 author: 'Ryan Russell'
-description: Welcome to my first blog blahhhh.
+description: Welcome to my first blog blahhhh long desc slkajsdf;lkjasd;flajk.
 category: "home"
 ---
 
