--- a/src/content/blog/van/about-the-van.mdx
+++ b/src/content/blog/van/about-the-van.mdx
@@ -4,6 +4,61 @@ author: "Ryan Russell"
 date: "2023-08-12"
 category: "van"
 description: "Everything to know about our new 2023 Ford Transit"
+ogImage: "van_cartoon.jpg"
 ---
 
-## This is my first post!
+We've always been interested in the idea of "vanlife" where people build a vehicle to live out of. One day
+after a few espresso martini's we thought, "what if we actually DID it?"
+
+We looked at a few companies that sold van conversions, but the prices were absurdley expensive. It also
+would not have given us the chance to design and build exactly what we wanted, which was half the fun.
+
+After a few more martini's we landed on trying to find a new-ish Ford Transit. We chose the Ford since I
+already own a Ford and was familiar with how to work on them. The rest of what we decided on:
+
+Hard requirements:
+- Ford Transit 350 (Cargo)
+- 148" Wheelbase, Non-Extended
+- High Roof
+- Sync 4 Stereo system
+
+Nice to have:
+- AWD
+- Adaptive Cruise
+- Towing Package
+- Dual batteries
+
+
+We got lucky and within a few weeks of starting our search, we found a 2023 on the lot just 30 miles away
+and went and bought it. It met all of the hard requirements and other than the adaptive cruise, all of the nice-to-have items.
+
+---
+
+<Image
+  src="/images/blog/van/van_at_house.jpg"
+  width="1000"
+  height="0"
+  className="h-auto rounded-md shadow-none transition-shadow duration-300 ease-in-out hover:shadow-lg hover:shadow-black/30 w-full"
+/>
+
+---
+
+Once we had the van, we started designing the layout, and deciding on what we wanted/needed. Our goal was not to live out of
+the van full time, but rather go on 2-3 week long trips at a time. We'd need to be able to bring our dog, and also continue to be able to work
+from the van full time while on the road.
+
+Exterior:
+- Solar on the roof
+- Small A/C unit and fan on the roof
+- Outdoor shower
+
+Interior:
+- Quen size bed (would need to be in N-S configuration)
+- Small sink inside
+- Small composting toilet inside
+- Pull out kitchen area (with fridge) in the "garage" area (under the bed)
+- Large enough battery bank to be off grid, charging with solar and alternator for up to 3 weeks
+- Enough fresh water for a week
+- Space for 2 people to work inside the van
+
+
