--- a/src/content/blog/van/about-the-van.mdx
+++ b/src/content/blog/van/about-the-van.mdx
@@ -38,6 +38,7 @@ and went and bought it. It met all of the hard requirements and other than the a
   src="/images/blog/van/van_at_house.jpg"
   width="1000"
   height="0"
+  alt="van-at-house"
   className="h-auto rounded-md shadow-none transition-shadow duration-300 ease-in-out hover:shadow-lg hover:shadow-black/30 w-full"
 />
 
