--- a/src/content/blog/van/about-the-van.mdx
+++ b/src/content/blog/van/about-the-van.mdx
@@ -1,7 +1,7 @@
 ---
-title: "About The Van"
+title: "About The Van: Our 2023 Ford Transit"
 author: "Ryan Russell"
-date: "2023-08-12"
+date: "2023-09-01"
 category: "van"
 description: "Everything to know about our new 2023 Ford Transit"
 ogImage: "van_cartoon.jpg"
@@ -11,13 +11,13 @@ We've always been interested in the idea of "vanlife" where people build a vehic
 after a few espresso martini's we thought, "what if we actually DID it?"
 
 We looked at a few companies that sold van conversions, but the prices were absurdley expensive. It also
-would not have given us the chance to design and build exactly what we wanted, which was half the fun.
+would not have given us the chance to design and build exactly what we wanted, which is half the fun!
 
 After a few more martini's we landed on trying to find a new-ish Ford Transit. We chose the Ford since I
 already own a Ford and was familiar with how to work on them. The rest of what we decided on:
 
 Hard requirements:
-- Ford Transit 350 (Cargo)
+- Ford Transit 250 Cargo
 - 148" Wheelbase, Non-Extended
 - High Roof
 - Sync 4 Stereo system
@@ -30,7 +30,7 @@ Nice to have:
 
 
 We got lucky and within a few weeks of starting our search, we found a 2023 on the lot just 30 miles away
-and went and bought it. It met all of the hard requirements and other than the adaptive cruise, all of the nice-to-have items.
+and went and picked it up. It met all of the hard requirements and other than the adaptive cruise, all of the nice-to-have items.
 
 ---
 
@@ -63,3 +63,8 @@ Interior:
 - Space for 2 people to work inside the van
 
 
+We are still working out many of the details - what we can fit, what we can afford, and what we will need. Josh is
+building much of the design in CAD and I'm working on planning out the electrical system. One of the first things
+we'll need to do it cut any necessary holes in the van, so a few of the first items we are looking at are the AC unit,
+fan, exterior connections (electrical, any plumbing, etc), and windows. As we finish up the planning process and start
+to build, we'll have many more posts to share!
