update img paths

--- a/src/content/blog/tech/vpn-wireguard-aws-unifi-2.mdx
+++ b/src/content/blog/tech/vpn-wireguard-aws-unifi-2.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Wireguard VPN with AWS and UDM Pro"
+title: "Wireguard VPN with AWS and UDM Pro 2"
 author: "Ryan Russell"
 date: "2023-09-01"
 category: "tech"
-description: "Setting up a VPN in AWS and connecting a UniFi Dream Machine Pro"
+description: "2 - Setting up a VPN in AWS and connecting a UniFi Dream Machine Pro"
 ogImage: "udm_vpn/network_routers.png"
 ---
 
