--- a/src/content/blog/van/about-the-van.mdx
+++ b/src/content/blog/van/about-the-van.mdx
@@ -4,7 +4,7 @@ author: "Ryan Russell"
 date: "2023-09-01"
 category: "van"
 description: "Everything to know about our new 2023 Ford Transit"
-ogImage: "van_cartoon.jpg"
+ogImage: "about_the_van/van_cartoon.jpg"
 ---
 
 We've always been interested in the idea of "vanlife" where people build a vehicle to live out of. One day
@@ -35,7 +35,7 @@ and went and picked it up. It met all of the hard requirements and other than th
 ---
 
 <Image
-  src="/images/blog/van/van_at_house.jpg"
+  src="/images/blog/van/about_the_van/van_at_house.jpg"
   width="1000"
   height="0"
   alt="van-at-house"
