--- a/src/content/blog/tech/vpn-wireguard-aws-unifi.mdx
+++ b/src/content/blog/tech/vpn-wireguard-aws-unifi.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Wireguard VPN with AWS and UDM Pro"
 author: "Ryan Russell"
-date: "2023-09-02"
+date: "2023-09-01"
 category: "tech"
 description: "Setting up a VPN in AWS and connecting a UniFi Dream Machine Pro"
 ogImage: "udm_vpn/network_routers.png"
@@ -51,9 +51,8 @@ The data transfer is what really makes this more cost effective than running a r
 
 Once I chose Lightsail, it was time to setup my server. I chose the settings and configurations I wanted
 and setup my Terraform code to deploy my instance to a fresh AWS account.
-
-```text
-resource "aws_lightsail_instance" "wireguard" {
+```hcl
+resource "aws_lightsail_instance" "wireguard" { 
   name              = "wireguard"
   availability_zone = "us-west-2b"
   blueprint_id      = "ubuntu_22_04"
@@ -73,39 +72,39 @@ IP addresses so our mobile devices could connect outside my home network.
 I also added a security group to allow SSH access from my home network and VPN to configure the server. Unfortunately 
 Lightsail is fairly limited so fully automating the setup wasn't feasible, but for this situation a manual setup was fine.
 
-```text
-  resource "aws_lightsail_instance_public_ports" "vpn_port" {
-    instance_name = aws_lightsail_instance.wireguard.name
+```hcl
+resource "aws_lightsail_instance_public_ports" "vpn_port" { 
+  instance_name = aws_lightsail_instance.wireguard.name
 
-    port_info {
-      protocol  = "udp"
-      from_port = 51821
-      to_port   = 51821
-      cidrs     = ["0.0.0.0/0"]
-    }
-
-    port_info {
-      protocol  = "tcp"
-      from_port = 22
-      to_port   = 22
-      cidrs     = ["${var.home_ip}/32", "10.0.0.0/8"]
-    }
+  port_info {
+    protocol  = "udp"
+    from_port = 51821
+    to_port   = 51821
+    cidrs     = ["0.0.0.0/0"]
   }
+
+  port_info {
+    protocol  = "tcp"
+    from_port = 22
+    to_port   = 22
+    cidrs     = ["${var.home_ip}/32", "10.0.0.0/8"]
+  }
+}
 ```
 
 Then finally I setup a static IP, and added a Route53 DNS record to point to it. This way I can use my domain name in my client
 configurations and if I ever need to move my server to a new account, VPC, etc where I lose the static IP, I won't have
 to update every client.
 
-```
-  resource "aws_lightsail_static_ip" "vpn_ip" {
-    name = "vpn-static-ip"
-  }
+```hcl
+resource "aws_lightsail_static_ip" "vpn_ip" {
+  name = "vpn-static-ip"
+}
 
-  resource "aws_lightsail_static_ip_attachment" "test" {
-    static_ip_name = aws_lightsail_static_ip.vpn_ip.name
-    instance_name  = aws_lightsail_instance.wireguard.name
-  }
+resource "aws_lightsail_static_ip_attachment" "test" {
+  static_ip_name = aws_lightsail_static_ip.vpn_ip.name
+  instance_name  = aws_lightsail_instance.wireguard.name 
+}
 ```
 
 ### Installing and Configuring Wireguard
@@ -114,17 +113,17 @@ With my instance launched, it was time to configure Wireguard.
 
 I SSH'd into the instance and installed the necessary packages and settings:
 ```bash
-  sudo apt install -y wireguard awscli jq resolvconf mtr traceroute net-tools
-  umask 077
+sudo apt install -y wireguard awscli jq resolvconf mtr traceroute net-tools 
+umask 077
 ```
 
 Enable packet forwarding by uncommenting the following line in `/etc/sysctl.conf`:
-```text
-  net.ipv4.ip_forward=1
+```conf
+net.ipv4.ip_forward=1 
 ```
 and reload `sysctl`
 ```bash
-  sudo sysctl -p
+sudo sysctl -p 
 ```
 
 Next I generated the keys and created the Wireguard config file. For details on creating the keys, refer to the [official Ubuntu
@@ -161,52 +160,52 @@ With the Interface configured, we can configure the peers. I generated the keys 
 configuration:
 
 * Pixel 5
-  ```text
-    [Peer]
-    PublicKey = <key>
-    AllowedIPs = 10.100.105.2/32
+  ```conf
+  [Peer]
+  PublicKey = <key>
+  AllowedIPs = 10.100.105.2/32 
   ```
 
 * Dream Machine Pro
-  ```text
-    [Peer]
-    PublicKey = <key>
-    AllowedIPs = 10.0.0.0/11, 10.100.105.3/32
+  ```conf
+  [Peer]
+  PublicKey = <key>
+  AllowedIPs = 10.0.0.0/11, 10.100.105.3/32 
   ```
   My home network CIDR is `10.0.0.0/11`, which is where the PiHole and Home Assistant are running, so I added those routes.
 
 * Macbook Pro
-  ```text
-    [Peer]
-    PublicKey = <key>
-    AllowedIPs = 10.100.105.4/32
+  ```conf
+  [Peer]
+  PublicKey = <key>
+  AllowedIPs = 10.100.105.4/32 
   ```
 
 The final configuration file looks like this:
 
-```text
-  [Interface]
-  PostUp = wg set %i private-key /etc/wireguard/%i.key
-  Address = 10.100.105.1/24
-  ListenPort = 51821
-  DNS = 10.5.5.192
-  PostUp   = iptables...
-  PostDown = iptables...
+```conf
+[Interface]
+PostUp = wg set %i private-key /etc/wireguard/%i.key 
+Address = 10.100.105.1/24
+ListenPort = 51821
+DNS = 10.5.5.192
+PostUp   = iptables...
+PostDown = iptables...
 
-  # Pixel 5
-  [Peer]
-  PublicKey = <key>
-  AllowedIPs = 10.100.105.2/32
+# Pixel 5
+[Peer]
+PublicKey = <key>
+AllowedIPs = 10.100.105.2/32 
 
-  # UDM
-  [Peer]
-  PublicKey = <key>
-  AllowedIPs = 10.0.0.0/11, 10.100.105.3/32
+# UDM
+[Peer]
+PublicKey = <key>
+AllowedIPs = 10.0.0.0/11, 10.100.105.3/32 
 
-  # MacBook
-  [Peer]
-  PublicKey = <key>
-  AllowedIPs = 10.100.105.4/32
+# MacBook
+[Peer]
+PublicKey = <key>
+AllowedIPs = 10.100.105.4/32 
 ```
 
 ## Client Peers
@@ -256,17 +255,17 @@ VPN to work through the UI, so I had to manually SSH into the UDM box and create
 instance.
 
 ```text
-  [Interface]
-  PostUp = wg set %i private-key /etc/wireguard/%i.key
-  Address = 10.100.105.3/24
-  ListenPort = 51821
-  DNS = 10.5.5.192, 8.8.8.8
-  PostUp = ping -c 1 10.100.105.1
+[Interface]
+PostUp = wg set %i private-key /etc/wireguard/%i.key 
+Address = 10.100.105.3/24
+ListenPort = 51821
+DNS = 10.5.5.192, 8.8.8.8
+PostUp = ping -c 1 10.100.105.1
 
-  [Peer]
-  PublicKey = <Lightsail public key>
-  Endpoint = <dns-endpoint>:51821
-  AllowedIPs = 10.100.105.0/24
+[Peer]
+PublicKey = <Lightsail public key> 
+Endpoint = <dns-endpoint>:51821
+AllowedIPs = 10.100.105.0/24
 ```
 
 ### Macbook Pro
