--- a/src/content/blog/van/about-the-van.mdx
+++ b/src/content/blog/van/about-the-van.mdx
@@ -39,7 +39,7 @@ and went and picked it up. It met all of the hard requirements and other than th
   width="1000"
   height="0"
   alt="van-at-house"
-  className="h-auto rounded-md shadow-none transition-shadow duration-300 ease-in-out hover:shadow-lg hover:shadow-black/30 w-full"
+  className="blog-image-full"
 />
 
 ---
