add newsletter, article frameworks

--- a/src/content/blog/home/onair-meeting-light.mdx
+++ b/src/content/blog/home/onair-meeting-light.mdx
@@ -26,6 +26,8 @@ when one of our cameras or microphones becomes active.
 There are two components to this project: The software side to activate the light at the right time, and the building
 of the light itself.
 
+<NewsletterCurious />
+
 ## Hardware
 
 For this project I had the perfect spot in mind: centered between the alarm control panel and light switch
