--- a/src/content/blog/tech/vpn-wireguard-aws-unifi.mdx
+++ b/src/content/blog/tech/vpn-wireguard-aws-unifi.mdx
@@ -43,6 +43,8 @@ And most importantly:
 
 The data transfer is what really makes this more cost effective than running a regular EC2 instance!
 
+<NewsletterCurious />
+
 ## VPN Server
 
 ### Creating A Lightsail Instance
