--- a/src/content/blog/van/kicking-off-2024.mdx
+++ b/src/content/blog/van/kicking-off-2024.mdx
@@ -39,7 +39,7 @@ Proposed floorplan layout
 />
 Water tank and battery test fit
 
----
+<NewsletterCurious />
 
 <Image
   src="/images/blog/van/kicking_off_2024/van3.jpg"
